# candle-lora-macro

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: cd.yml  docs.yml
candle_lora_macro/: attr.replace_layer_fields.html  derive.AutoLoraConvert.html  index.html
examples/: embed.rs  linear.rs
src/: lib.rs  main.rs
src/candle_lora_macro/: lib.rs.html
tests/: option_linear.rs  test.rs
