[package]
name = "candle-lora-macro"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Eric Buehler"]
description = "Macros for a more ergonomic candle-lora."
homepage = "https://github.com/EricLBuehler/trc"
repository = "https://github.com/EricLBuehler/trc"
keywords = ["machine-learning", "candle-lora", "ergonomic", "macro"] #TODOs: Add candle keyword
categories = ["science"]

[dependencies]
proc-macro2 = "1.0.66"
quote_into = "0.2.0"
syn = { version = "2.0.32", features = ["full", "extra-traits"] }
candle-lora = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
quote = "1.0.33"

[lib]
proc-macro = true
